--- a/_config.yml
+++ b/_config.yml
@@ -23,16 +23,16 @@ heroimage: https://cdn.pixabay.com/photo/2016/10/20/18/35/earth-1756274_960_720.
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
 email: qtalksit@gmail.com
-facebook_username: /
-twitter_username: /
+#facebook_username: /
+#twitter_username: /
 instagram_username: quy.ngn
 linkedin_username: /
 github_username:  QuyGonJinn
 #youtube_channel_id: UCk_93NXYP-U_AOB5GfWlOow
-reddit_username: /
-behance_username: /
-dribbble_username: /
-spotify_username: /
+#reddit_username: /
+#behance_username: /
+#dribbble_username: /
+#spotify_username: /
 
 # Google Analytics
 google-analytics: UA-163806439-1
